Fix text menu alignment in responsive

--- a/source/stylesheets/tabs.sass
+++ b/source/stylesheets/tabs.sass
@@ -67,6 +67,7 @@
             border-bottom: 1px solid #134fa9
             margin-left: 0px
             margin-bottom: 0
+            text-indent: -5px
 
   .tab-content
     background: #F7F7F7
